--- a/Ihu igwe/index.html
+++ b/Ihu igwe/index.html
@@ -6,6 +6,28 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <form>
+            <input type="search" placeholder="Enter a city...." required />
+            <input type="submit" value="search" />
+        </form>
+    </header>
+    <main>
+        <div>
+            <h1>Enugu</h1>
+            <P>
+                Friday 00:01,scattered clouds
+                <br />
+                Humidity: 66%, Wind:2.14km/h
+            </p>
+        </div>
+        <div>⛅13°<sup>C</sup></div>
+    </main>
+    <footer>
+        This project was coded by
+        <a href="https://github.com/CHERYL-8" target="_blank">Obioma Ugwueze</a> is
+        <a href="https://github.com/CHERYL-8" target="_blank">open-sourced on GitHub</a> and
+        <a href="https://app.netlify.com/teams/cheryl-8/overview" target="_blank">hosted on Netlify</a>
+    </footer>
 </body>
 </html>
