--- a/Ihu igwe/index.html
+++ b/Ihu igwe/index.html
@@ -27,7 +27,7 @@
         This project was coded by
         <a href="https://github.com/CHERYL-8" target="_blank">Obioma Ugwueze</a> is
         <a href="https://github.com/CHERYL-8" target="_blank">open-sourced on GitHub</a> and
-        <a href="https://app.netlify.com/teams/cheryl-8/overview" target="_blank">hosted on Netlify</a>
+        <a href="https://udidi-ubochi.netlify.app/" target="_blank">hosted on Netlify</a>
     </footer>
 </body>
 </html>
