--- a/Ihu igwe/index.html
+++ b/Ihu igwe/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Src/styles.css"/>
+    <link rel="stylesheet" href="styles.css"/>
     <title>udidi-ubochi</title>
 </head>
 <body>
