--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>udidi-ubochi</title>
 </head>
 <body>
+    <div class="container">
     <header>
         <form>
             <input type="search" placeholder="Enter a city...." required />
@@ -30,5 +31,6 @@
         <a href="https://github.com/CHERYL-8" target="_blank">open-sourced on GitHub</a> and
         <a href="https://udidi-ubochi.netlify.app/" target="_blank">hosted on Netlify</a>
     </footer>
+</div>
 </body>
 </html>
