Just finished adding css to the project

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </form>
     </header>
     <main>
-        <div class="weather-info">
+        <div class="weather">
         <div>
             <h1 class="weather">Enugu</h1>
             <P class="weather-details">
