--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             </p>
         </div>
         <div class="weather-container">
-        <span class="emoji">⛅</span>
-        <span class="temperature">13</span>
-        <span class="unit">°C</span>
+        <div class="emoji">⛅</div>
+        <div class="temperature">13</div>
+        <div class="unit">°C</div>
         </div>
         </div>
     </main>
