--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 <body>
     <div class="container">
     <header>
-        <form>
-            <input type="search" placeholder="Enter a city...." required class="city-search"/>
+        <form id="search-tab">
+            <input type="search" placeholder="Enter a city...." required class="city-search" id="city-input"/>
             <input type="submit" value="search" class="submit-button" />
         </form>
     </header>
     <main>
         <div class="weather-info">
         <div>
-            <h1 class="weather">Enugu</h1>
+            <h1 class="weather" id="city-weather">Enugu</h1>
             <P class="weather-details">
                 Friday 00:01,scattered clouds
                 <br />
@@ -41,5 +41,6 @@
         <a href="https://udidi-ubochi.netlify.app/" target="_blank">hosted on Netlify</a>
     </footer>
 </div>
+<script src="index.js"></script>
 </body>
 </html>
