Added more weather data

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <div>
             <h1 class="weather" id="city-weather"></h1>
             <P class="weather-details">
-                Friday 00:01,scattered clouds
+                <span id="time"></span>,<span id="cloud-details"></span>
                 <br />
-                Humidity: <strong>66%</strong>, Wind: <strong>2.14km/h</strong>
+                Humidity: <strong id="humidity"></strong>, Wind: <strong id="wind"></strong>
             </p>
         </div>
         <div class="weather-container">
