--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </p>
         </div>
         <div class="weather-container">
-        <div class="emoji">⛅</div>
+        <div id="emoji"></div>
         <div class="temperature" id="temperature"></div>
         <div class="unit">°C</div>
         </div>
