Updated the GItHub link

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <footer>
         This project was coded by
         <a href="https://github.com/CHERYL-8" target="_blank">Obioma Ugwueze</a> is
-        <a href="https://github.com/CHERYL-8" target="_blank">open-sourced on GitHub</a> and
+        <a href="https://github.com/CHERYL-8/Ugwueze-s-Weather" target="_blank">open-sourced on GitHub</a> and
         <a href="https://udidi-ubochi.netlify.app/" target="_blank">hosted on Netlify</a>
     </footer>
 </div>
