--- a/index.html
+++ b/index.html
@@ -34,6 +34,48 @@
         <div class="unit">°C</div>
         </div>
         </div>
+        <div class="weather-forecast">
+            <div class="forecast-day">
+                <div class="forecast-date">Fri</div>
+                  <div class="forecast-icon">☁</div>
+                    <div class="forecast-temperatures">
+                      <div class="forecast-temperature"><strong>14°</strong></div>
+                      <div class="forecast-temperature">7°</div>
+                    </div>
+            </div>
+                        <div class="forecast-day">
+                          <div class="forecast-date">Sat</div>
+                          <div class="forecast-icon">☁</div>
+                          <div class="forecast-temperatures">
+                            <div class="forecast-temperature"><strong>14°</strong></div>
+                            <div class="forecast-temperature">7°</div>
+                          </div>
+                        </div>
+                                    <div class="forecast-day">
+                                      <div class="forecast-date">Sun</div>
+                                      <div class="forecast-icon">☁</div>
+                                      <div class="forecast-temperatures">
+                                        <div class="forecast-temperature"><strong>14°</strong></div>
+                                        <div class="forecast-temperature">7°</div>
+                                      </div>
+                                    </div>
+                                                <div class="forecast-day">
+                                                  <div class="forecast-date">Mon</div>
+                                                  <div class="forecast-icon">☁</div>
+                                                  <div class="forecast-temperatures">
+                                                    <div class="forecast-temperature"><strong>14°</strong></div>
+                                                    <div class="forecast-temperature">7°</div>
+                                                  </div>
+                                                </div>
+                                                            <div class="forecast-day">
+                                                              <div class="forecast-date">Tue</div>
+                                                              <div class="forecast-icon">☁</div>
+                                                              <div class="forecast-temperatures">
+                                                                <div class="forecast-temperature"><strong>14°</strong></div>
+                                                                <div class="forecast-temperature">7°</div>
+                                                              </div>
+                                                            </div>
+        </div>
     </main>
     <footer>
         This project was coded by
