--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
         <div class="weather-forecast" id="forecast"></div>
     </main>
     <footer>
-        This project was coded by
+        <em>This project was coded by
         <a href="https://github.com/CHERYL-8" target="_blank">Obioma Ugwueze</a> is
         <a href="https://github.com/CHERYL-8/Ugwueze-s-Weather" target="_blank">open-sourced on GitHub</a> and
         <a href="https://udidi-ubochi.netlify.app/" target="_blank">hosted on Netlify</a>
+        </em>
     </footer>
 </div>
 <script src="index.js"></script>
